Add functionality to add NT's to oligo by clicking on their table cell.

--- a/index.html
+++ b/index.html
@@ -73,71 +73,71 @@
                         </tr>
                         <tr class="table-type-row base-type-DNA" id="row-DNA">
                             <th class="table-cell-type" id="tableHeadingDNA">DNA (dN)</th>
-                            <td  class="table-cell-A" id="amountDNA_A">0</td>
-                            <td class="table-cell-G" id="amountDNA_G">0</td>
-                            <td class="table-cell-C" id="amountDNA_C">0</td>
-                            <td class="table-cell-T" id="amountDNA_T">0</td>                            
-                            <td class="table-cell-U" id="amountDNA_U">0</td>                            
+                            <td  class="table-cell-A NT-cell" id="amountDNA_A" data-ntcode="dA">0</td>
+                            <td class="table-cell-G NT-cell" id="amountDNA_G" data-ntcode="dG">0</td>
+                            <td class="table-cell-C NT-cell" id="amountDNA_C" data-ntcode="dC">0</td>
+                            <td class="table-cell-T NT-cell" id="amountDNA_T" data-ntcode="dT">0</td>                            
+                            <td class="table-cell-U NT-cell" id="amountDNA_U" data-ntcode="dU">0</td>                            
                             <td class="table-cell-Total" id="amountDNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-RNA" id="row-RNA">
                             <th class="table-cell-type" id="tableHeadingRNA">RNA (rN)</th>
-                            <td class="table-cell-A"id="amountRNA_A">0</td>
-                            <td class="table-cell-G" id="amountRNA_G">0</td>
-                            <td class="table-cell-C" id="amountRNA_C">0</td>
-                            <td class="table-cell-T" id="amountRNA_T">0</td>                            
-                            <td class="table-cell-U" id="amountRNA_U">0</td>                            
+                            <td class="table-cell-A NT-cell"id="amountRNA_A" data-ntcode="rA">0</td>
+                            <td class="table-cell-G NT-cell" id="amountRNA_G" data-ntcode="rG">0</td>
+                            <td class="table-cell-C NT-cell" id="amountRNA_C" data-ntcode="rC">0</td>
+                            <td class="table-cell-T NT-cell" id="amountRNA_T" data-ntcode="rT">0</td>                            
+                            <td class="table-cell-U NT-cell" id="amountRNA_U" data-ntcode="rU">0</td>                            
                             <td class="table-cell-Total" id="amountRNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-Fluoro" id="row-Fluoro">
                             <th class="table-cell-type" id="tableHeadingFluoro">2'Fluoro RNA (fN)</th>
-                            <td class="table-cell-A" id="amountFluoro_A">0</td>
-                            <td class="table-cell-G" id="amountFluoro_G">0</td>
-                            <td class="table-cell-C" id="amountFluoro_C">0</td>
-                            <td class="table-cell-T" id="amountFluoro_T">0</td>                            
-                            <td class="table-cell-U" id="amountFluoro_U">0</td>                            
+                            <td class="table-cell-A NT-cell" id="amountFluoro_A" data-ntcode="fA">0</td>
+                            <td class="table-cell-G NT-cell" id="amountFluoro_G" data-ntcode="fG">0</td>
+                            <td class="table-cell-C NT-cell" id="amountFluoro_C" data-ntcode="fC">0</td>
+                            <td class="table-cell-T NT-cell" id="amountFluoro_T" data-ntcode="fT">0</td>                            
+                            <td class="table-cell-U NT-cell" id="amountFluoro_U" data-ntcode="fU">0</td>                            
                             <td class="table-cell-Total" id="amountFluoro_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-LNA" id="row-LNA">
                             <th class="table-cell-type" id="tableHeadingLNA">LNA (lN)</th>
-                            <td class="table-cell-A" id="amountLNA_A">0</td>
-                            <td class="table-cell-G" id="amountLNA_G">0</td>
-                            <td class="table-cell-C" id="amountLNA_C">0</td>
-                            <td class="table-cell-T" id="amountLNA_T">0</td>                            
-                            <td class="table-cell-U" id="amountLNA_U">0</td>                            
+                            <td class="table-cell-A NT-cell" id="amountLNA_A" data-ntcode="lA">0</td>
+                            <td class="table-cell-G NT-cell" id="amountLNA_G" data-ntcode="lG">0</td>
+                            <td class="table-cell-C NT-cell" id="amountLNA_C" data-ntcode="lC">0</td>
+                            <td class="table-cell-T NT-cell" id="amountLNA_T" data-ntcode="lT">0</td>                            
+                            <td class="table-cell-U NT-cell" id="amountLNA_U" data-ntcode="lU">0</td>                            
                             <td class="table-cell-Total" id="amountLNA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-OMe" id="row-OMe">
                             <th class="table-cell-type" id="tableHeadingOMe">2'OMe RNA (mN)</th>
-                            <td class="table-cell-A" id="amountOMe_A">0</td>
-                            <td class="table-cell-G" id="amountOMe_G">0</td>
-                            <td class="table-cell-C" id="amountOMe_C">0</td>
-                            <td class="table-cell-T" id="amountOMe_T">0</td>                            
-                            <td class="table-cell-U" id="amountOMe_U">0</td>                            
+                            <td class="table-cell-A NT-cell" id="amountOMe_A" data-ntcode="mA">0</td>
+                            <td class="table-cell-G NT-cell" id="amountOMe_G" data-ntcode="mG">0</td>
+                            <td class="table-cell-C NT-cell" id="amountOMe_C" data-ntcode="mC">0</td>
+                            <td class="table-cell-T NT-cell" id="amountOMe_T" data-ntcode="mT">0</td>                            
+                            <td class="table-cell-U NT-cell" id="amountOMe_U" data-ntcode="mU">0</td>                            
                             <td class="table-cell-Total" id="amountOMe_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-FANA" id="row-FANA">
                             <th class="table-cell-type" id="tableHeadingFANA">FANA (aN)</th>
-                            <td class="table-cell-A" id="amountFANA_A">0</td>
-                            <td class="table-cell-G" id="amountFANA_G">0</td>
-                            <td class="table-cell-C" id="amountFANA_C">0</td>
-                            <td class="table-cell-T" id="amountFANA_T">0</td>                            
-                            <td class="table-cell-U" id="amountFANA_U">0</td>                            
+                            <td class="table-cell-A NT-cell" id="amountFANA_A" data-ntcode="aA">0</td>
+                            <td class="table-cell-G NT-cell" id="amountFANA_G" data-ntcode="aG">0</td>
+                            <td class="table-cell-C NT-cell" id="amountFANA_C" data-ntcode="aC">0</td>
+                            <td class="table-cell-T NT-cell" id="amountFANA_T" data-ntcode="aT">0</td>                            
+                            <td class="table-cell-U NT-cell" id="amountFANA_U" data-ntcode="aU">0</td>                            
                             <td class="table-cell-Total" id="amountFANA_Total">0</td>
                             <td class="table-cell-FILLER"></td>
                         </tr>
                         <tr class="table-type-row base-type-ANA" id="row-ANA">
                             <th class="table-cell-type" id="tableHeadingANA">ANA (araN)</th>
-                            <td class="table-cell-A" id="amountANA_A">0</td>
-                            <td class="table-cell-G" id="amountANA_G">0</td>
-                            <td class="table-cell-C" id="amountANA_C">0</td>
-                            <td class="table-cell-T" id="amountANA_T">0</td>                            
-                            <td class="table-cell-U" id="amountANA_U">0</td>                            
+                            <td class="table-cell-A NT-cell" id="amountANA_A" data-ntcode="araA">0</td>
+                            <td class="table-cell-G NT-cell" id="amountANA_G" data-ntcode="araG">0</td>
+                            <td class="table-cell-C NT-cell" id="amountANA_C" data-ntcode="araC">0</td>
+                            <td class="table-cell-T NT-cell" id="amountANA_T" data-ntcode="araT">0</td>                            
+                            <td class="table-cell-U NT-cell" id="amountANA_U" data-ntcode="araU">0</td>                            
                             <td class="table-cell-Total" id="amountANA_Total">0</td> 
                             <td class="table-cell-FILLER"></td>
                         </tr>
