Properly wrap words in output div.

--- a/index.html
+++ b/index.html
@@ -53,12 +53,8 @@
                     <div class="oligo-output-title">
                         Reversed Sequence
                     </div>
-                    <pre><span id="reversedSequenceOutput"></span></pre>
-                </div>
-                <div class="oligo-table-container">
-
-                </div>
-                 
+                    <span id="reversedSequenceOutput"></span>
+                </div>                              
                 <div class="oligo-table-container">
                     <table>
                         <tr class="table-base-headings">
